# CW_5

./: .gitignore  README.md  main.py  pyproject.toml
data/: employers.csv  employers.json  employers.txt  requests.sql
src/: api_hh.py  api_interaction.py  connectors.py  dbconnector.py  vacancy.py  vacancy_constructor.py
test/: conftest.py  test_api_interaction.py  test_connectors.py  test_vacancy.py
